Fixed margins and spacing
Fixed margin to account for navbar on contact page
Fixed h2 spacings on munch page

--- a/src/stylesheets/contact.css
+++ b/src/stylesheets/contact.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-areas: 'form' 'links';
   padding: 0 1rem;
+  margin-top: var(--nav-height);
 }
 
 .contact-form {
